/ ‘dwight-moody/index.html’

--- a/dwight-moody/index.html
+++ b/dwight-moody/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      img {
+        height: 100vh;
+        width: 100vw;
+      }
+    </style>
+  </head>
   <body>
     <img src="./moody-tabernacle.svg" />
   </body>
