--- a/dwight-moody/index.html
+++ b/dwight-moody/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <style>
+      body {
+        margin: 0;
+      }
+
       img {
         height: 100vh;
         width: 100vw;
