--- a/dwight-moody/index.html
+++ b/dwight-moody/index.html
@@ -8,7 +8,7 @@
 
       img {
         height: 100vh;
-        width: 100vw;
+        width: calc(100vw - 20px);
         display: block;
       }
     </style>
