--- a/index.html
+++ b/index.html
@@ -1,20 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      body {
-        margin: 0;
-      }
-
-      img {
-        height: 100vh;
-        width: calc(100vw - 20px);
-        display: block;
-      }
-    </style>
-  </head>
   <body>
-    <img src="./moody-tabernacle.svg" />
-    <img src="./prodigal-son.svg" />
+    <a href="./dwight-moody/">Dwight Moody</a>
+    <a href="./niemöller/">Niemöller</a>
   </body>
 </html>
